# meridian

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  meridian.example.toml
.github/workflows/: ci.yml  release.yml
apps/meridian/: Cargo.toml
apps/meridian/src/: main.rs
apps/meridian/src/commands/: analyze.rs  init.rs  mod.rs  pm.rs  report.rs  serve.rs  setup.rs  suggest.rs  summarize_title.rs
crates/meridian-config/: Cargo.toml
crates/meridian-config/src/: config.rs  lib.rs
crates/meridian-core/: Cargo.toml
crates/meridian-core/src/: embed.rs  embedding_scorer.rs  lib.rs  metric.rs  panel.rs  record.rs  result.rs  scorer.rs  taxonomy.rs
crates/meridian-ingest/: Cargo.toml
crates/meridian-ingest/src/: anthropic.rs  claude_code.rs  generic.rs  lib.rs  ta.rs
crates/meridian-report/: Cargo.toml
crates/meridian-report/src/: auth.rs  export.rs  lib.rs  panel.rs  pm.rs  suggest.rs  summary.rs  table.rs
docs/: quickstart.md
docs/sources/: claude-code.md  cursor.md  panel.md  standalone.md
examples/: pm-init.md  report.md  setup.md
