[workspace]
members = [
    "crates/meridian-core",
    "crates/meridian-ingest",
    "crates/meridian-report",
    "crates/meridian-config",
    "apps/meridian",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/Trusted-Autonomy/meridian"

[workspace.dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
toml = "0.8"
clap = { version = "4", features = ["derive"] }
tempfile = "3"
reqwest = { version = "0.12", features = ["blocking", "json"] }
dialoguer = "0.11"
console = "0.15"
rmcp = { version = "0.14", features = ["server", "transport-io"] }
schemars = "1"
tokio = { version = "1", features = ["full"] }
